feat(*): add logo refactor(index.html): add meta properties refactor(upload): improve UI for mobile devices

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>FunscriptPlayer</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Connect your favorite devices with Funscript Player and enjoy."
+    />
+    <meta name="keywords" content="funscript,player,web,devices" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="twitter:description"
+      content="Connect your favorite devices with Funscript Player and enjoy."
+    />
+    <meta
+      name="twitter:image"
+      content="https://funscript-player.vercel.app/assets/logo.png"
+    />
+    <meta property="og:site_name" content="Funscript Player" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Funscript Player - Web Funscript Player"
+    />
+    <meta
+      property="og:description"
+      content="Connect your favorite devices with Funscript Player and enjoy."
+    />
+    <meta
+      property="og:image"
+      content="https://funscript-player.vercel.app/assets/logo.png"
+    />
+    <meta property="og:image:width" content="1536" />
+    <meta property="og:image:height" content="1536" />
+    <meta property="og:image:type" content="image/png" />
+    <title>Funscript Player | Web Funscript Player</title>
+    <base href="/" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/site.webmanifest" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
