refactor(index.html): update referenced domains from Vercel to new refactor(index.html): add link rel canonical href

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://funscript-player.vercel.app/assets/logo.png"
+      content="https://funscriptplayer.com/assets/logo.png"
     />
     <meta property="og:site_name" content="Funscript Player" />
     <meta property="og:locale" content="en" />
@@ -29,13 +29,14 @@
     />
     <meta
       property="og:image"
-      content="https://funscript-player.vercel.app/assets/logo.png"
+      content="https://funscriptplayer.com/assets/logo.png"
     />
     <meta property="og:image:width" content="1536" />
     <meta property="og:image:height" content="1536" />
     <meta property="og:image:type" content="image/png" />
     <title>Funscript Player | Web Funscript Player</title>
     <base href="/" />
+    <link rel="canonical" href="https://funscriptplayer.com" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
